--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,2 +1,3 @@
 <link rel="stylesheet" href="{{ "css/awards.css" | relURL }}">
+<link rel="stylesheet" href="{{ "css/home.css" | relURL }}">
 <link rel="icon" href="{{ "icon.jpg" | relURL }}" type="image/x-icon" />
