--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,9 +1,10 @@
 /* Homepage-specific layout tweaks */
 
-/* News: allow wider content similar to publications */
+/* News: narrower text size and wider column */
 #news .max-w-prose,
 #news .prose {
-  max-width: 64rem !important;
+  max-width: none;
+  width: 100%;
 }
 
 #news ul {
@@ -11,40 +12,78 @@
 }
 
 #news li {
-  margin-bottom: 0.65rem;
-  font-size: 1rem;
+  margin-bottom: 0.55rem;
+  font-size: 0.95rem;
   line-height: 1.45;
 }
 
-/* Awards & Academic Service: keep the slimmer centered look on wide screens */
-@media (min-width: 1200px) {
-  #awards,
-  #service {
-    width: 30.9%;
-    float: left;
-    display: block;
+@media (min-width: 1024px) {
+  #news .max-w-prose,
+  #news .prose {
+    width: min(50vw, 60rem);
   }
+}
 
-  #awards {
-    margin-left: 19.5%;
-    margin-right: 0;
-    clear: both;
-  }
-
-  #service {
-    margin-right: 19.5%;
-    margin-left: 0;
-    clear: none;
-  }
-
-  #projects {
-    clear: both;
-    margin-top: 2rem;
-  }
+/* Two-column Awards + Academic Service with right-aligned service column */
+#awards,
+#service {
+  width: 100%;
+  display: block;
+  float: none;
+  text-align: left;
 }
 
 #awards .max-w-prose,
 #service .max-w-prose {
   max-width: none;
   width: 100%;
+}
+
+@media (min-width: 1100px) {
+  #awards {
+    width: 38%;
+    float: left;
+    margin-left: 7%;
+    margin-right: 0;
+    text-align: left;
+    clear: both;
+  }
+
+  #service {
+    width: 38%;
+    float: right;
+    margin-right: 7%;
+    margin-left: 0;
+    text-align: right;
+  }
+
+  #service .max-w-prose {
+    margin-left: auto;
+  }
+
+  #service .prose {
+    text-align: inherit;
+  }
+
+  #projects {
+    display: block;
+    clear: both;
+    margin-top: 2rem;
+  }
+}
+
+/* Experience/Education alignment */
+#experience .experience-column,
+#experience .education-column {
+  text-align: left;
+}
+
+@media (min-width: 1024px) {
+  #experience .education-column {
+    text-align: right;
+  }
+
+  #experience .education-column .prose {
+    text-align: right;
+  }
 }
