--- a/static/css/awards.css
+++ b/static/css/awards.css
@@ -28,4 +28,21 @@
   .award-item .award-detail {
     color: #333;
   }
+
+  /* Shared section heading scale */
+  body .section-title {
+    font-size: 1.875rem;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: -0.01em;
+  }
+
+  body .section-heading {
+    margin-bottom: 1.5rem;
+    text-align: left;
+  }
+
+  body .section-subtitle {
+    margin-top: 0.5rem;
+  }
   
