更新教育机构的显示样式，修改多个部分的标题样式，调整奖项的描述和状态，更新CSS以支持新样式

--- a/layouts/partials/blox/news-list.html
+++ b/layouts/partials/blox/news-list.html
@@ -7,7 +7,7 @@
     {{ if or $block.content.title $block.content.subtitle }}
       <div class="section-heading">
         {{ if $block.content.title }}
-          <h2 class="section-title text-gray-900 dark:text-white">
+          <h2 class="section-title text-3xl font-bold text-gray-900 dark:text-white">
             {{ $block.content.title | markdownify | emojify }}
           </h2>
         {{ end }}
