--- a/layouts/partials/blox/academic-service.html
+++ b/layouts/partials/blox/academic-service.html
@@ -25,7 +25,7 @@
 <!-- <div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center"> -->
 <div class="w-full px-4">
   <div class="mx-auto flex w-full max-w-5xl flex-col gap-6">
-    <h3 class="section-title text-center text-gray-900 dark:text-white">{{ i18n "academic service" | default "Academic Service" }}</h3>
+    <h3 class="section-title text-center text-3xl font-bold text-gray-900 dark:text-white">{{ i18n "academic service" | default "Academic Service" }}</h3>
     <div class="space-y-4">
       {{ range $services }}
         <div class="grid grid-cols-1 md:grid-cols-[minmax(auto,200px),1fr] gap-2 md:gap-4">
